[package]
name = "particles"
version = "0.7.0"
authors = ["theAzack9 <robin@cavachi.be>", "Stian Soltvedt <soltvedt.stian@gmail.com>", "Vegard Itland <veggitland@hotmail.com>"]
readme = "readme.md"
homepage = "https://github.com/stisol/particles"

[dependencies]
noise = "0.5"
nalgebra = "0.16"
alga = "0.7.2"
lazy_static = "1.1.0"
gl_context = {version = "*", path = "./gl_context"}
resources = {version = "*", path = "./resources"}
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
image = "0.19"
rusttype = { version = "0.7", features = [ "gpu_cache" ] }
unicode-normalization = "0.1.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.10"
glutin = "0.18"
rand = "0.5"

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"
rand = {version = "0.5", features = ["stdweb"]}

[profile.dev]
opt-level = 2
