[package]
name = "brainstorm"
version = "0.8.0"
authors = ["theAzack9 <robin@cavachi.be>", "Stian Soltvedt <soltvedt.stian@gmail.com>", "Vegard Itland <veggitland@hotmail.com>"]
readme = "readme.md"
homepage = "https://github.com/TheTriumvirate/particles"
publish = false

[dependencies]
nalgebra = "0.16"
gl_bindings = {version = "*", path = "./gl_bindings"}
resources = {version = "*", path = "./resources"}
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
rusttype = { version = "0.7", features = [ "gpu_cache" ] }
unicode-normalization = "0.1.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.5"
structopt = "0.2"
glutin = "0.18"

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"
rand = {version = "0.5", features = ["stdweb"]}

[profile.dev]
opt-level = 2   
codegen-units = 5
