[package]
name = "gl_context"
version = "0.1.0"
authors = ["theAzack9 <robin@cavachi.be>", "Stian Soltvedt <soltvedt.stian@gmail.com>", "Vegard Itland <veggitland@hotmail.com>"]
readme = "readme.md"

[dependencies]
nalgebra = "0.16"
lazy_static = "1.1.0"
image = "0.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.10"

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"
stdweb-derive = "0.5"
serde = "1.0"
serde_derive = "1.0"
