[package]
name = "window"
version = "0.8.0"
authors = ["theAzack9 <robin@cavachi.be>", "Stian Soltvedt <soltvedt.stian@gmail.com>", "Vegard Itland <veggitland@hotmail.com>"]
readme = "readme.md"
homepage = "https://github.com/TheTriumvirate/particles"
publish = false
edition = "2018"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.19"
gl = {version = "*", path = "../gl"}

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"
gl_bindings = {version = "*", path = "../gl_bindings"}

[profile.dev]
opt-level = 2   
codegen-units = 5
incremental = false